var; NPE friendlier; instanceof String s)