@@ -1,7 +1,6 @@
 package victor.training.java11;
 
 
-
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -20,14 +19,25 @@ public class Vars {
 
    // var for lambda args, for annotations; all or none
 
+   public static final Map<Integer, String> map = Map.of(1, "One", 2, "Two", 3, "Three");
+
    public static void main(String[] args) {
+
+//      var map = method();
+
       // TODO Map.of(), .ofEntries()
       Map<Integer, List<String>> map = new HashMap<>();
-      map.put(1, Arrays.asList("one"));
-      map.put(2, Arrays.asList("one", "two"));
+      map.put(1, List.of("one"));
+      map.put(2, List.of("one", "two"));
 
       for (Entry<Integer, List<String>> entry : map.entrySet()) {
          System.out.println(entry.getKey());
       }
    }
+
+   public static Map<Integer, List<String>> method() {
+      return null;
+   }
+
+
 }
